adicionando o css na estrutura

--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Agencia DevHouse</title>
+    <link rel="stylesheet" href="/css/global.css" />
+    <title>Home | Agencia DevHouse</title>
   </head>
   <body>
     <h1>Olá sem bem vindo a Agencia DevHouse</h1>
