--- a/views/home.html
+++ b/views/home.html
@@ -5,16 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/global.css" />
+    <link rel="stylesheet" href="/css/home.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Home | Agencia DevHouse</title>
   </head>
   <body>
-    <h1>Olá sem bem vindo a Agencia DevHouse</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam expedita
-      quam quod sapiente fugit veritatis cupiditate, facere quis ad optio quo
-      maiores repellat perspiciatis illum laudantium possimus quasi totam
-      deserunt.
-    </p>
-    <img src="/img/destaque.jpg" alt="" />
+    <header>
+      <img
+        src="/img/logo.png"
+        alt="Agencia - devHouse"
+        title="Agencia - devHouse"
+        id="logo"
+      />
+      <nav class="menu">
+        <a href=""> Home </a>
+        <a href=""> Produtos </a>
+        <a href=""> Depoimentos </a>
+      </nav>
+      <div class="atendimento">
+        <a href="tel:+1140028922">(11) 4002-8922</a>
+        <button>Atendimento</button>
+      </div>
+    </header>
+    <section class="banner">
+      <h1>Sua empresa sem no topo!</h1>
+      <p>Podemos alavancar seu negocio</p>
+      <div>
+        <button class="button-padrao">Conheça Agora</button>
+        <button class="button-padrao">Entre em contato</button>
+      </div>
+      <img src="/img/banner.png" alt="Banner 1" title="banner-1" />
+    </section>
   </body>
 </html>
