--- a/views/home.html
+++ b/views/home.html
@@ -21,10 +21,12 @@
         title="Agencia - devHouse"
         id="logo"
       />
+      <img id="menu-mobile" src="/img/menu-icon.png" alt="Menu" title="Menu" />
       <nav class="menu">
         <a href=""> Home </a>
         <a href=""> Produtos </a>
         <a href=""> Depoimentos </a>
+        <a href="/blog"> Blog </a>
       </nav>
       <div class="atendimento">
         <a href="tel:+1140028922">(11) 4002-8922</a>
@@ -38,6 +40,8 @@
         <button class="button-padrao">Conheça Agora</button>
         <button class="button-padrao">Entre em contato</button>
       </div>
+
+      <p class="t"></p>
       <img src="/img/banner.png" alt="Banner 1" title="banner-1" />
     </section>
   </body>
