--- a/views/home.html
+++ b/views/home.html
@@ -4,45 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/home.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-
-    <title>Home | Agencia DevHouse</title>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="">
+    <title>Agencia DevHouse</title>
   </head>
   <body>
-    <header>
-      <img
-        src="/img/logo.png"
-        alt="Agencia - devHouse"
-        title="Agencia - devHouse"
-        id="logo"
-      />
-      <img id="menu-mobile" src="/img/menu-icon.png" alt="Menu" title="Menu" />
-      <nav class="menu">
-        <a href=""> Home </a>
-        <a href=""> Produtos </a>
-        <a href=""> Depoimentos </a>
-        <a href="/blog"> Blog </a>
-      </nav>
-      <div class="atendimento">
-        <a href="tel:+1140028922">(11) 4002-8922</a>
-        <button>Atendimento</button>
-      </div>
-    </header>
-    <section class="banner">
-      <h1>Sua empresa sem no topo!</h1>
-      <p>Podemos alavancar seu negocio</p>
-      <div>
-        <button class="button-padrao">Conheça Agora</button>
-        <button class="button-padrao">Entre em contato</button>
-      </div>
+    
+    <h1>Olá sem bem vindo a Agencia DevHouse</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam expedita
+      quam quod sapiente fugit veritatis cupiditate, facere quis ad optio quo
+      maiores repellat perspiciatis illum laudantium possimus quasi totam
+      deserunt.
 
-      <p class="t"></p>
-      <img src="/img/banner.png" alt="Banner 1" title="banner-1" />
-    </section>
+    </p>
+    <img src="/img/destaque.jpg" alt="" />
   </body>
 </html>
