--- a/views/home.html
+++ b/views/home.html
@@ -44,5 +44,8 @@
       <p class="t"></p>
       <img src="/img/banner.png" alt="Banner 1" title="banner-1" />
     </section>
+    <footer>
+      <h1>Agencia devhouse</h1>
+    </footer>
   </body>
 </html>
