alterações de padroes

--- a/views/home.html
+++ b/views/home.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+  
     <title>Agencia DevHouse</title>
   </head>
   <body>
     
-    <h1>Olá sem bem vindo a Agencia DevHouse</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam expedita
-      quam quod sapiente fugit veritatis cupiditate, facere quis ad optio quo
-      maiores repellat perspiciatis illum laudantium possimus quasi totam
-      deserunt.
-
-      <p class="t"></p>
-      <img src="/img/banner.png" alt="Banner 1" title="banner-1" />
-    </section>
-    <footer>
-      <h1>Agencia devhouse</h1>
-    </footer>
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum assumenda perspiciatis maxime aliquam ad quibusdam optio dicta expedita quod impedit, sed numquam, voluptate consequatur adipisci sapiente esse architecto quas eos.</h1>
   </body>
 </html>
