--- a/views/home.html
+++ b/views/home.html
@@ -20,8 +20,12 @@
       <p class="t"></p>
       <img src="/img/banner.png" alt="Banner 1" title="banner-1" />
     </section>
+    <section>
+      <h1>Propaganda</h1>
+    </section>
     <footer>
       <h1>Agencia devhouse</h1>
     </footer>
+
   </body>
 </html>
