--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 body {
@@ -54,6 +54,22 @@ header {
 
 #menu-mobile {
   display: none;
+}
+#logo {
+  transition: transform 1s;
+}
+#logo:hover {
+  transform: scale(1.5);
+}
+
+#atendimento {
+  position: fixed;
+  bottom: 10px;
+  right: 50px;
+  background: green;
+  border-radius: 10px;
+  padding: 13px;
+  color: #fff;
 }
 
 @media (max-width: 465px) {
