criação da logica de produto

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -88,3 +88,13 @@ header {
     justify-content: space-between;
   }
 }
+
+table {
+  width: 100%;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+}
