--- a/views/admin/produtos.ejs
+++ b/views/admin/produtos.ejs
@@ -9,7 +9,10 @@
   </head>
   <body>
     <%- include('../components/header') %>
-    <main>
+    <main class="produtos">
+      <a class="button-create" href="/admin/cadastro-produto"
+        >Cadastrar Novo Produto</a
+      >
       <table>
         <thead>
           <tr>
@@ -19,13 +22,15 @@
           </tr>
         </thead>
         <tbody>
+          <% produtos.forEach(produto => { %>
           <tr>
-            <td>1212671-2126t172t17</td>
-            <td>Site incrivel</td>
+            <td><%= produto.id %></td>
+            <td><%= produto.nome %></td>
             <td>
               <button>Excluir</button>
             </td>
           </tr>
+          <% }); %>
         </tbody>
       </table>
     </main>
